--- a/addons/skins/Default/resources/mobile.css
+++ b/addons/skins/Default/resources/mobile.css
@@ -9,11 +9,12 @@ body {font-size:12px}
 #body-content {border-left:0; border-right:0; border-radius:0}
 #body {padding-top:44px}
 
+a i {margin-right:5px;}
 
 /* Header - center the title and float the buttons. */
 #hdr-content {padding:0 5px}
 #hdr-inner {padding:0}
-#hdr #forumTitle {font-size:14px; padding:11px 0; text-align:center; display:block; width:160px; margin:0 auto; white-space:nowrap; overflow:hidden; text-overflow:ellipsis}
+#hdr #forumTitle {font-size:14px; padding:11px 0; text-align:center; display:block; width:200px; margin:0 auto; white-space:nowrap; overflow:hidden; text-overflow:ellipsis}
 #hdr .button {margin:6px 0}
 #hdr .popupWrapper {float:right; margin:0 0 0 7px}
 #hdr #backButton {float:left; margin:13px 5px 0 5px}
